 * Removed deprecated FieldFunction,FieldToPointFunction::getSpatialDimension
 * Removed deprecated LinearModelRSquared, LinearModelAdjustedRSquared

=== Python module ===

=== Miscellaneous ===

=== Bug fixes ===
 * #979 (Viewer does not handle BarPlot's fillStyle)
 * #977 (HypothesisTest::ChiSquared is bogus)
 * #982 (LinearModelTest::LinearModelDurbinWatson with several factors)

== 1.12 release (2018-11-08) == #release-1.12

=== Library ===

==== Major changes ====
 * FieldFunction and co knows its input/output meshes before evaluation
 * SobolSequence has been extended from maximum dimension 40 to 1111
 * Parametrized statistical tests by first kind risk instead of 1-risk
 * FittingTest now compute a correct p-value in Kolmogorov tests even if the parameters are estimated from the tested sample
 * Completed documentation migration with process content

==== New classes ====
 * ProbabilitySimulationResult
 * ExpectationSimulationAlgorithm, ExpectationSimulationResult
 * ExtremeValueCopula
 * ChaospyDistribution
 * SobolSimulationAlgorithm, SobolSimulationResult
 * FractionalBrownianMotionModel

==== API changes ====
 * Removed deprecated MonteCarlo, ImportanceSampling, QuasiMonteCarlo, RandomizedQuasiMonteCarlo, RandomizedLHS classes
 * Removed deprecated Field::getDimension, getSpatialDimension, getSpatialMean, getTemporalMean methods
 * Remove deprecated Process::getDimension, getSpatialDimension methods
 * Removed deprecated CovarianceModel::getDimension, getSpatialDimension, getSpatialCorrelation, setSpatialCorrelation methods
 * Removed deprecated SpectralModel::getDimension, getSpatialDimension, getSpatialCorrelation methods
 * Removed deprecated TruncatedDistribution single bound accessors
 * Removed deprecated Function constructors
 * Removed deprecated Sample,SampleImplementation::operator*(SquareMatrix) and operator/(SquareMatrix) (and in-place operators)
 * Removed deprecated SampleImplementation::scale(SquareMatrix)