@@ -6,3 +6,5 @@ Normal          =class=Normal name=Normal dimension=3 mean=class=Point name=Unna
 Estimated normal=class=Normal name=Normal dimension=3 mean=class=Point name=Unnamed dimension=3 values=[0.4883,1.46562,2.46859] sigma=class=Point name=Unnamed dimension=3 values=[0.992448,3.00459,4.99434] correlationMatrix=class=CorrelationMatrix dimension=3 implementation=class=MatrixImplementation name=Unnamed rows=3 columns=3 values=[1,0.312825,0.492695,0.312825,1,0.483693,0.492695,0.483693,1]
 Default normal=class=Normal name=Normal dimension=1 mean=class=Point name=Unnamed dimension=1 values=[0] sigma=class=Point name=Unnamed dimension=1 values=[1] correlationMatrix=class=CorrelationMatrix dimension=1 implementation=class=MatrixImplementation name=Unnamed rows=1 columns=1 values=[1]
 Normal from parameters=class=Normal name=Normal dimension=3 mean=class=Point name=Unnamed dimension=3 values=[0.5,1.5,2.5] sigma=class=Point name=Unnamed dimension=3 values=[1,3,5] correlationMatrix=class=CorrelationMatrix dimension=3 implementation=class=MatrixImplementation name=Unnamed rows=3 columns=3 values=[1,0.333333,0.5,0.333333,1,0.5,0.5,0.5,1]
+Estimated distribution= class=Normal name=Normal dimension=1 mean=class=Point name=Unnamed dimension=1 values=[0.4883] sigma=class=Point name=Unnamed dimension=1 values=[0.992448] correlationMatrix=class=CorrelationMatrix dimension=1 implementation=class=MatrixImplementation name=Unnamed rows=1 columns=1 values=[1]
+Parameter distribution= class=ComposedDistribution name=ComposedDistribution dimension=2 copula=class=IndependentCopula name=IndependentCopula dimension=2 marginal[0]=class=Normal name=Normal dimension=1 mean=class=Point name=Unnamed dimension=1 values=[0.4883] sigma=class=Point name=Unnamed dimension=1 values=[0.00992448] correlationMatrix=class=CorrelationMatrix dimension=1 implementation=class=MatrixImplementation name=Unnamed rows=1 columns=1 values=[1] marginal[1]=class=RandomMixture name=RandomMixture distribution collection=[class=Chi name=Chi dimension=1 nu=9999] weights =class=Matrix implementation=class=MatrixImplementation name=Unnamed rows=1 columns=1 values=[0.00992498] constant=class=Point name=Unnamed dimension=1 values=[0]
