@@ -15,4 +15,4 @@ Normal from parameters= Normal(mu = [0.5,1.5,2.5], sigma = [1,3,5], R = [[ 1    
  [ 0.333333 1        0.5      ]
  [ 0.5      0.5      1        ]])
 Estimated distribution            = class=Normal name=Normal dimension=1 mean=class=Point name=Unnamed dimension=1 values=[0.4883] sigma=class=Point name=Unnamed dimension=1 values=[0.992448] correlationMatrix=class=CorrelationMatrix dimension=1 implementation=class=MatrixImplementation name=Unnamed rows=1 columns=1 values=[1]
-Parameter distribution            = ComposedDistribution(Normal(mu = 0.4883, sigma = 0.00992448), RandomMixture(0.0100005 * Chi(nu = 9999)), IndependentCopula(dimension = 2))
+Parameter distribution            = ComposedDistribution(Normal(mu = 0.4883, sigma = 0.00992448), RandomMixture(0.00992498 * Chi(nu = 9999)), IndependentCopula(dimension = 2))
